[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-why"
version = "0.1.1"
description = "A pytest plugin that explains failing tests like a senior engineer."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "pytest-why contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://www.dhirajdas.dev"
Repository = "https://github.com/godhiraj-code/pytest-why"

[project.optional-dependencies]
dev = [
  "build",
  "pytest>=7",
]

[project.entry-points.pytest11]
why = "pytest_why.plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
